k8s-manifests/kong.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: 'true'

spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
  namespace: gateway
spec:
  gatewayClassName: kong
  listeners:
  - name: internal
    hostname: "*.cloudificando.corp"
    port: 80
    protocol: HTTP

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: gateway
spec:
  controller: ingress-controllers.konghq.com/kong
