k8s-manifests/go-webhook-server.yaml
---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: aws-credentials
# type: Opaque
# stringData:
#   AWS_ACCESS_KEY_ID: your-access-key-id      # Replace with your AWS Access Key ID
#   AWS_SECRET_ACCESS_KEY: your-secret-access-key  # Replace with your AWS Secret Access Key
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-webhook-deployment
  namespace: minio-dev 
  labels:
    app: minio-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-webhook
  template:
    metadata:
      namespace: minio-dev 
      labels:
        app: minio-webhook
    spec:
      # serviceAccountName: aws-iam-sa  # For IAM roles (if using EKS with IRSA)
      containers:
        - name: minio-webhook
          image: cloudificando/minio-webhook:latest  # Replace with your image
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: minio-webhook-svc
  namespace: minio-dev 
  labels:
    app: minio-webhook
spec:
  type: ClusterIP
  selector:
    app: minio-webhook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-webhook
  namespace: gateway
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
    - name: kong
      namespace: gateway
  hostnames:
    - minio-webhook.cloudificando.corp
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-webhook-svc
          port: 80
          kind: Service
          namespace: minio-dev
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: minio-webhook
  namespace: minio-dev
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
